--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:design:$support_version"
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Androidx
@@ -43,7 +44,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-// RecyclerView, CardView
+    // RecyclerView, CardView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     // Glide
@@ -59,8 +60,8 @@ dependencies {
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-    //Firebase
-    implementation 'com.google.firebase:firebase-core:17.2.1'
+    //Fire base
+    implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-config:19.1.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
@@ -68,7 +69,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     //circle image
     implementation 'de.hdodenhof:circleimageview:3.0.1'
@@ -88,6 +89,8 @@ dependencies {
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     //font
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    //progress
+    implementation 'com.wang.avi:library:2.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
