--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.twoam.agent">
+    package="com.kadabra.agent">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".utilities.AppController"
+        android:name="com.kadabra.agent.utilities.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,13 +18,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ticket.TicketActivity"
+            android:name="com.kadabra.agent.ticket.TicketActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".exception.CrashActivity"
+            android:name="com.kadabra.agent.exception.CrashActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".intro.SplashActivity"
+            android:name="com.kadabra.agent.intro.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".login.LoginActivity"
+            android:name="com.kadabra.agent.login.LoginActivity"
             android:screenOrientation="portrait" />
 
         <meta-data
@@ -50,7 +50,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <service android:name="com.twoam.agent.firebase.FirebasePushNotificatinService">
+        <service android:name="com.kadabra.agent.firebase.FirebasePushNotificatinService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
