--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,10 +76,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     //permissions
     implementation 'pub.devrel:easypermissions:0.4.0'
-    //Google Map
+    //Google Services
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-base:17.1.0'
-    //places
+    //Google places
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     //room
