--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
+
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.2"
@@ -75,13 +76,17 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     //permissions
+    implementation 'com.karumi:dexter:5.0.0'
     implementation 'pub.devrel:easypermissions:0.4.0'
     //Google Services
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-base:17.1.0'
     //Google places
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.gms:play-services-places:17.0.0'
+//    implementation 'com.google.android.gms:play-services-location:17.0.0'
+//    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.0.3'
+
     //room
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
@@ -92,6 +97,12 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     //progress
     implementation 'com.wang.avi:library:2.1.3'
+// auto search
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.2@aar'
+//country phone
+    implementation 'com.hbb20:ccp:2.3.8'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
