--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.kadabra.agent">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -22,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="com.kadabra.agent.ticket.TicketActivity"
             android:screenOrientation="portrait"/>
@@ -63,7 +65,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <service android:name="com.kadabra.agent.firebase.FirebasePushNotificatinService">
+<!--        <service android:name="com.kadabra.agent.firebase.FirebasePushNotificatinService">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
+        <service android:name=".services.NotificatinService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
