--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     //ripple
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     //font
-    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+//    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     //progress
     implementation 'com.wang.avi:library:2.1.3'
 // auto search
@@ -102,7 +102,8 @@ dependencies {
     implementation 'com.romandanylyk:pageindicatorview:1.0.2@aar'
 //country phone
     implementation 'com.hbb20:ccp:2.3.8'
-
+//custom datetime
+    implementation 'com.github.tylersuehr7:googlish-datetime-picker:1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
