--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
         google()
         maven {
             url 'https://maven.fabric.io/public'
+
         }
+        maven { url 'https://jitpack.io' }
         jcenter()
         
     }
