--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //enable vector drawables
-
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -45,6 +45,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    // Support multidex
+    implementation 'com.android.support:multidex:1.0.3'
     // RecyclerView, CardView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -81,10 +83,13 @@ dependencies {
     //Google Services
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-base:17.1.0'
-    //Google places
-//    implementation 'com.google.android.gms:play-services-location:17.0.0'
-//    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    //places
     implementation 'com.google.android.libraries.places:places:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    //directiont
+//    implementation 'com.github.jd-alexander:library:1.1.0'
+
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.0.3'
 
     //room
@@ -93,8 +98,12 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.2.3'
     //ripple
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
-    //font
-//    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+//    //geo fire
+//    implementation 'com.firebase:geofire-android:2.3.1'
+    // Google Maps Services (needed for directions)
+    implementation 'com.google.maps:google-maps-services:0.2.11'
+    implementation 'org.slf4j:slf4j-nop:1.7.25'
+
     //progress
     implementation 'com.wang.avi:library:2.1.3'
 // auto search
