--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,10 @@ dependencies {
     // Google Maps Services (needed for directions)
     implementation 'com.google.maps:google-maps-services:0.2.11'
     implementation 'org.slf4j:slf4j-nop:1.7.25'
+    //show many markers with titles and other func.
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
+    //paging
+    implementation 'android.arch.paging:runtime:1.0.1'
 
     //progress
     implementation 'com.wang.avi:library:2.1.3'
@@ -115,7 +119,7 @@ dependencies {
     implementation 'gr.escsoft.michaelprimez.searchablespinner:SearchableSpinner:1.0.9'
 //custom datetime
     implementation 'com.github.tylersuehr7:googlish-datetime-picker:1.1'
-    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
