--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // GSON
@@ -111,7 +111,7 @@ dependencies {
     //progress
     implementation 'com.wang.avi:library:2.1.3'
 // auto search
-    implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.4'
     implementation 'com.romandanylyk:pageindicatorview:1.0.2@aar'
 //country phone
     implementation 'com.hbb20:ccp:2.3.8'
@@ -122,7 +122,11 @@ dependencies {
     //horizontal steps progress bar
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
 //image viewer
-    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.1'
+    implementation 'com.github.piasy:BigImageViewer:1.6.5'
+    implementation 'com.github.piasy:GlideImageLoader:1.6.5'
+    //ripple
+    implementation 'com.gauravbhola.ripplepulsebackground:library:1.0.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
