--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.41'
     ext.support_version='28.0.0'
     repositories {
+
         google()
         maven {
             url 'https://maven.fabric.io/public'
@@ -27,9 +28,20 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+//        maven { // this is for image viewer
+//            url  "http://dl.bintray.com/piasy/maven"
+//        }
+//        google()
+//        jcenter()
+//        maven { url "https://jitpack.io" }
+
+        maven { // this is for image viewer
+            url  "http://dl.bintray.com/piasy/maven"
+        }
         jcenter()
         maven { url "https://jitpack.io" }
+        google()
+
     }
 }
 
